<resources>
    <string name="app_name">Cafe NTS</string>
    <string name="fish_user_names">Firstname Lastname</string>
    <string name="dialog_password_title">Input Password</string>
    <string name="fish_hall_name">Bowling Hall</string>
    <string name="fish_table_name">Table 1</string>

    <string name="label_halls">Halls</string>

    <string name="pref_host_key" translatable="false">pref_host</string>
    <string name="pref_host_title">Endpoint host url</string>
    <string name="pref_host_default_value" translatable="false">http://192.168.1.4:8080</string>
    <string name="pref_path_key" translatable="false">pref_path</string>
    <string name="pref_path_title">Root path for services</string>
    <string name="pref_path_default_value" translatable="false">/cafe-nts-rest/rest/</string>
    <string name="pref_create_stub_db_key" translatable="false">pref_create_stub_db_key</string>

    <string name="item_settings">Settings</string>
    <string name="item_sign_off">Sign off</string>

    <string name="status_table_vacant">Vacant</string>
    <string name="status_table_occupied">Occupied</string>
    <string name="status_table_reserved">Reserved</string>
    <string name="status_table_not_available">Not Available</string>
    <string name="fish_dish_descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="fish_dish_name">Pizza Pepperoni original spicy 450g</string>
    <string name="fish_price">15.49</string>
    <string name="table_add_guest">New Guest</string>
    <string name="table_guests_num">Guests</string>
    <string name="menu_select_guest">Select a Guest</string>
    <string name="table_summary">Summ</string>
    <string name="fish_total_price">124.75</string>
    <string name="fish_discount">Discount: personal card</string>
    <string name="fish_discount_per_cent">10%</string>
    <string name="table_summ_total">Total</string>
    <string name="fish_total_with_discount">74.50</string>
    <string name="order_empty">Order Empty</string>
    <string name="fish_dish_amount">2</string>
    <string name="hint_dish_amount">Amount</string>
    <string name="error_title_hall_not_picked">No hall picked</string>
    <string name="error_msg_hall_not_picked">Pick a hall to see tables</string>
    <string name="activity_title_tables">Tables</string>
    <string name="error_load_data">Error loading data</string>

</resources>
