<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_margin_v"
    android:paddingEnd="@dimen/activity_margin_h"
    android:paddingStart="@dimen/activity_margin_h"
    android:paddingTop="@dimen/activity_margin_v">

    <LinearLayout
        android:id="@+id/blockGuests"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/table_guests_num"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtGuestsNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:text="4"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />
        </LinearLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+1" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-1" />
        </LinearLayout>-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/table_add_guest"/>

        <ListView
            android:id="@+id/listGuests"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@color/colorAccentLite"
            android:layout_marginTop="@dimen/activity_margin_v" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/blockGuestOrder"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toStartOf="@id/blockSummary"
        android:layout_toEndOf="@id/blockGuests">

        <TextView
            android:id="@+id/txtNoGuestSelected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/menu_select_guest"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/blockSummary"
        android:layout_width="112dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table_summary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fish_total_price"
            android:textSize="28sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fish_discount"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/fish_discount_per_cent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/table_summ_total"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/colorAccent"
            android:text="@string/fish_total_with_discount"/>
    </LinearLayout>

</RelativeLayout>