<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/guest"
    android:paddingBottom="@dimen/item_padding_v"
    android:paddingEnd="@dimen/item_padding_h"
    android:paddingStart="@dimen/item_padding_h"
    android:paddingTop="@dimen/item_padding_v">

    <TextView
        android:id="@+id/txtDishName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/txtDishPrice"
        android:layout_marginEnd="@dimen/item_padding_h"
        android:text="@string/fish_dish_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtDishPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/fish_price"
        android:textSize="20sp" />

    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/txtDishDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDishName"
        android:layout_alignEnd="@id/txtDishName"
        android:text="@string/fish_dish_descr"/>
</RelativeLayout>